--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -7,7 +7,17 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:padding="8dp"
     tools:context=".MainActivity$PlaceholderFragment">
+
+    <TextView
+        android:id="@+id/server_setting_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="16dp"
+        android:textSize="20sp"
+        android:text="@string/server_settings"/>
 
     <LinearLayout
         android:id="@+id/address_area"
@@ -15,13 +25,13 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/server_setting_label"
         android:weightSum="2">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:text="@string/address_label"
             android:layout_weight="1"/>
 
@@ -29,7 +39,7 @@
             android:id="@+id/address_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:text="@string/localhost"
             android:layout_weight="1"/>
 
@@ -47,7 +57,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:text="@string/port_label"
             android:layout_weight="1"/>
 
@@ -55,39 +65,102 @@
             android:id="@+id/port_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:text="4035"
             android:layout_weight="1"/>
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/xml_setting_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/port_area"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
+        android:textSize="20sp"
+        android:text="@string/xml_locate_setting"/>
+
     <LinearLayout
         android:id="@+id/xml_path_area"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:gravity="center"
-        android:layout_marginTop="8dp"
-        android:layout_below="@id/port_area" >
+        android:layout_below="@id/xml_setting_label"
+        android:weightSum="2">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="@string/xml_source"
+            android:layout_weight="1"/>
+
+        <Spinner
+            android:id="@+id/path_spin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/url_area"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_below="@id/xml_path_area"
+        android:visibility="gone"
+        android:weightSum="2">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="@string/xml_source"/>
-
-        <Spinner
-            android:id="@+id/path_spin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:text="@string/xml_site"
+            android:layout_weight="1"/>
 
         <EditText
             android:id="@+id/path_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:textSize="20dp"
-            android:text="http://" />
+            android:textSize="20sp"
+            android:text="http://"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        style="?android:attr/buttonBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:weightSum="2">
+
+        <Button
+            android:id="@+id/cancel_button"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:text="@string/cancel_label"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+        <Button
+            android:id="@+id/save_button"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:text="@string/save_label"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"/>
 
     </LinearLayout>
 
