Corresponding to the new version of Device Connect

--- a/app/src/main/res/values/permission_array.xml
+++ b/app/src/main/res/values/permission_array.xml
@@ -9,12 +9,19 @@
         <item>file</item>
         <item>media_player</item>
         <item>mediastream_recording</item>
+        <!-- 旧バージョン
         <item>network_service_discovery</item>
+        -->
+        <item>servicediscovery</item>
         <item>notification</item>
         <item>phone</item>
         <item>proximity</item>
         <item>settings</item>
         <item>system</item>
         <item>vibration</item>
+        <!-- dConnectHostほ利用する場合は下記を追加(PermissionFragmentでも可)
+        <item>serviceinformation</item>
+        <item>canvas</item>
+        -->
     </string-array>
 </resources>
