--- a/app/src/main/res/layout/fragment_operation.xml
+++ b/app/src/main/res/layout/fragment_operation.xml
@@ -20,6 +20,7 @@
     </ScrollView>
 
     <ScrollView
+        android:id="@+id/result_scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/border"
